src/ui/snapshots/voyage_record_m_60x24.snap
---
source: src/ui/overlay_snapshot_tests.rs
expression: frame
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 24 },
    content: [
        "┌ ⁂ The Record ────────────────────────────────────────────┐",
        "│                                                          │",
        "│The crossing, in order                                    │",
        "│  · Day 1 — The Last Harbor                               │",
        "│  · Day 3 — The Lightship Vigil                           │",
        "│  · Day 5 — The Shoal Markets                             │",
        "│  · Day 7 — The Drowned Choir                             │",
        "│  · Day 10 — Graywater Anchorage                          │",
        "│  · Day 12 — Candlewick Light                             │",
        "│  · Day 14 — The Salt Orchard                             │",
        "│  · Day 17 — The Shallows Gate                            │",
        "│  · Day 19 — First Drift                                  │",
        "│  · Day 19 — Refit: Storm Sail                            │",
        "│  · Day 21 — The Wandering Fair                           │",
        "│  · Day 24 — The Mirrorcalm                               │",
        "│  · Day 26 — Saint Elm's Rest                             │",
        "│  · Day 28 — The Crossroads Light                         │",
        "│  · Day 31 — The Whale Roads                              │",
        "│  · Day 33 — Drift's End                                  │",
        "│  · Day 35 — The Threshold                                │",
        "│  · Day 37 — The Last Lantern                             │",
        "│  · Day 40 — The Silence                                  │",
        "│  · Day 42 — The Choir of Bones                           │",
        "└──────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 3, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 5, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 6, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 14, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 16, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 17, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 18, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 19, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 20, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 21, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 22, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
