src/ui/snapshots/voyage_record_xl_160x45.snap
---
source: src/ui/overlay_snapshot_tests.rs
expression: frame
---
Buffer {
    area: Rect { x: 0, y: 0, width: 160, height: 45 },
    content: [
        "┌ ⁂ The Record ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│                                                                                                                                                              │",
        "│The crossing, in order                                                                                                                                        │",
        "│  · Day 1 — The Last Harbor                                                                                                                                   │",
        "│  · Day 3 — The Lightship Vigil                                                                                                                               │",
        "│  · Day 5 — The Shoal Markets                                                                                                                                 │",
        "│  · Day 7 — The Drowned Choir                                                                                                                                 │",
        "│  · Day 10 — Graywater Anchorage                                                                                                                              │",
        "│  · Day 12 — Candlewick Light                                                                                                                                 │",
        "│  · Day 14 — The Salt Orchard                                                                                                                                 │",
        "│  · Day 17 — The Shallows Gate                                                                                                                                │",
        "│  · Day 19 — First Drift                                                                                                                                      │",
        "│  · Day 19 — Refit: Storm Sail                                                                                                                                │",
        "│  · Day 21 — The Wandering Fair                                                                                                                               │",
        "│  · Day 24 — The Mirrorcalm                                                                                                                                   │",
        "│  · Day 26 — Saint Elm's Rest                                                                                                                                 │",
        "│  · Day 28 — The Crossroads Light                                                                                                                             │",
        "│  · Day 31 — The Whale Roads                                                                                                                                  │",
        "│  · Day 33 — Drift's End                                                                                                                                      │",
        "│  · Day 35 — The Threshold                                                                                                                                    │",
        "│  · Day 37 — The Last Lantern                                                                                                                                 │",
        "│  · Day 40 — The Silence                                                                                                                                      │",
        "│  · Day 42 — The Choir of Bones                                                                                                                               │",
        "│  · Day 43 — No letters. There will be no more letters.                                                                                                       │",
        "│  · Day 44 — The Ember Hold                                                                                                                                   │",
        "│  · Day 47 — The Starless Reach                                                                                                                               │",
        "│  · Day 49 — Deepgate                                                                                                                                         │",
        "│  · Day 51 — First Light                                                                                                                                      │",
        "│  · Day 54 — The Root Shallows                                                                                                                                │",
        "│  · Day 56 — The Bloom Fields                                                                                                                                 │",
        "│  · Day 58 — The Roots of Light                                                                                                                               │",
        "│                                                                                                                                                              │",
        "│The letters, kept                                                                                                                                             │",
        "│                                                                                                                                                              │",
        "│From the Haven's new warden:                                                                                                                                  │",
        "│  The rooms stand. I have kept your bunk made, which the committee calls sentimental and I call readiness. The hearth draws well. Everything you built is     │",
        "│doing what you built it to do.                                                                                                                                │",
        "│                                                                                                                                                              │",
        "│From the Deep guild:                                                                                                                                          │",
        "│  Layer 30 holds. Dues collected, ale drunk, nobody dead who didn't sign for it. The lift you paid for runs sweet.                                            │",
        "│  P.S. Tell Torvald his chair is still his chair. We voted.                                                                                                   │",
        "│                                                                                                                                                              │",
        "│From the fisher-fleets:                                                                                                                                       │",
        "│  Big run of silverback this month. We salted more than we can eat, so some of it is in this box. The sea here still behaves, mostly, which we take as your   │",
        "└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 1, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 23, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 2, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 3, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 4, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 5, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 6, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 7, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 8, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 9, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 10, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 11, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 12, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 13, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 14, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 15, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 16, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 17, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 18, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 19, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 20, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 21, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 22, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 23, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 24, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 25, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 25, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 26, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 26, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 27, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 27, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 28, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 28, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 29, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 29, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 30, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 30, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 31, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 32, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 18, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 32, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 33, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 34, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 34, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 35, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 154, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 35, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 36, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 36, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 36, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 37, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 37, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 38, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 38, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 39, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 115, y: 39, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 39, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 40, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 60, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 40, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 41, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 41, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 42, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 42, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 42, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 43, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 156, y: 43, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 159, y: 43, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
