src/ui/snapshots/voyage_strip_ferry_m_60x24.snap
---
source: src/ui/overlay_snapshot_tests.rs
expression: frame
---
Buffer {
    area: Rect { x: 0, y: 0, width: 60, height: 24 },
    content: [
        "┌ ✦ The Crossing ──────────────────────────────────────────┐",
        "│                                                          │",
        "│Chapter I · the Tree grows (1/6)                          │",
        "│                                                          │",
        "│Underway — toward The Drowned Choir                       │",
        "│Arrives in 16h                                            │",
        "│A singing road                                            │",
        "│                                                          │",
        "│Provisions ███████████████████░ 93                        │",
        "│Hope       radiant ↑                                      │",
        "│Pace       Easy   Day 7                                   │",
        "│Carrying   1,238 souls — bound for the Tree               │",
        "│                                                          │",
        "│[S] Souls  ·  [W] Watch  ·  [T] Pace  ·  [R] Log  ·  [L]  │",
        "│Reckoning  ·  [Q] Quit                                    │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "│                                                          │",
        "└──────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 1, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 2, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 3, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 5, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Rgb(120, 90, 160), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 6, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 7, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 9, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 9, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 9, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 10, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 11, fg: Rgb(255, 215, 0), bg: Reset, underline: Reset, modifier: BOLD,
        x: 23, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 57, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 14, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 15, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 16, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 17, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 18, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 19, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 20, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 21, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 22, fg: Rgb(150, 120, 200), bg: Reset, underline: Reset, modifier: NONE,
    ]
}
